# lms-system-medical

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
apps/accounts/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/api/: serializers.py  views.py
apps/assessments/: admin.py  models.py  permissions.py  services.py  tests.py  urls.py  views.py
apps/assessments/migrations/: 0001_initial.py
apps/audit/: admin.py  models.py
apps/audit/migrations/: 0001_initial.py
apps/courses/: admin.py  models.py  tests.py  urls.py  views.py
apps/courses/migrations/: 0001_initial.py  0002_filecontent.py  0003_coursemateriallink.py  0004_open_published_course_runs.py  0005_courserunstaff_curator_role.py  0006_courseenrollmentlink.py
apps/grading/: admin.py  models.py  urls.py  views.py
apps/grading/migrations/: 0001_initial.py
apps/learning/: admin.py  models.py  services.py  tests.py  urls.py  views.py
apps/learning/migrations/: 0001_initial.py  0002_enrollment_link_source.py
apps/messaging/: admin.py  consumers.py  forms.py  models.py  permissions.py  realtime.py  routing.py  services.py  tests.py  urls.py  views.py
apps/messaging/migrations/: 0001_initial.py  0002_message_attachments_and_idempotency.py  0003_favoritecontact.py
apps/notifications/: models.py  tasks.py  urls.py  views.py
apps/notifications/migrations/: 0001_initial.py
apps/organizations/: admin.py  models.py  tests.py
config/: api_urls.py  asgi.py  celery.py  context_processors.py  settings.py  tests.py  urls.py  views.py
docs/: ARCHITECTURE.md  BACKUP_AND_RESTORE.md  DEPLOYMENT.md  DEVELOPMENT.md  SECURITY.md  VERCEL.md
docs/adr/: 001-modular-monolith.md  002-postgresql.md  003-server-rendered-ui.md
nginx/: default.conf
static/css/: app.css
static/css/base/: reset.css  (+1 more)
templates/: base.html  dashboard.html
templates/accounts/: admin_dashboard.html  admin_documentation.html  documentation_courses.html  documentation_home.html  documentation_management.html  login.html  profile.html  register.html  study_group_detail.html
templates/assessments/: result.html  take_quiz.html
templates/components/: alert.html
templates/courses/: catalog.html  create.html  detail.html  edit.html  enroll_by_link.html  my_courses.html  quiz_create.html
templates/errors/: 400.html  403.html  404.html  500.html
templates/grading/: gradebook.html
templates/learning/: course.html
templates/messaging/: course_chat.html  direct_messages.html  realtime_chat.html
templates/notifications/: detail.html  list.html
(+9 files in other folders)
