[project]
name = "medical-lms"
version = "0.1.0"
description = "Django LMS for medical education"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "Django>=6.0,<6.1",
    "celery>=5.6",
    "django-htmx>=1.28",
    "djangorestframework>=3.17",
    "drf-spectacular>=0.30",
    "Pillow>=12",
    "openpyxl>=3.1",
    "psycopg[binary]>=3.3",
    "python-dotenv>=1.2",
    "redis>=8",
    "whitenoise>=6.11",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
files = ["apps", "config"]
exclude = ["migrations"]
check_untyped_defs = true
disable_error_code = ["import-untyped"]
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.django-stubs]
django_settings_module = "config.settings"
