[project]
name = "medical-lms"
version = "0.1.0"
description = "Django LMS for medical education"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "Django>=6.0,<6.1",
    "channels[daphne]>=4.3,<5",
    "channels-redis>=4.2,<5",
    "celery>=5.6",
    "django-htmx>=1.28",
    "djangorestframework>=3.17",
    "drf-spectacular>=0.30",
    "Pillow>=12",
    "openpyxl>=3.1",
    "psycopg[binary]>=3.3",
    "pylint-django>=2.8",
    "pylint>=4.0",
    "python-dotenv>=1.2",
    "redis>=8",
    "whitenoise>=6.11",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"config/asgi.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.pylint.main]
load-plugins = ["pylint_django"]
init-hook = "import os; os.environ.setdefault('DJANGO_SETTINGS_MODULE', 'config.settings')"
ignore-paths = [".*/migrations/.*"]

[tool.pylint.messages_control]
disable = [
    "duplicate-code",
    "import-outside-toplevel",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
]

[tool.pylint.design]
max-args = 6
max-branches = 45
max-locals = 35
max-statements = 140
